--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -99,8 +99,8 @@
           function (data) {
           document.getElementById("pressure").innerHTML = data.pressure;
           document.getElementById("temperature").innerHTML = data.temperature;
-          document.getElementById("variable3").innerHTML = data.variable3;
-          document.getElementById("variable4").innerHTML = data.variable4;
+          document.getElementById("pressure_buffer").innerHTML = data.pressure_buffer;
+          document.getElementById("pressure_inhale").innerHTML = data.pressure_inhale;
           document.getElementById("variable5").innerHTML = data.variable5;
           document.getElementById("variable6").innerHTML = data.variable6;
           }
