--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -24,7 +24,7 @@
 	
 	<!-- Alarm -->
         <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0 alarm-ok px-2 py-0" id = "alarm_ul">
-	  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" class="svg-inline--fa fa-exclamation-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path id = "path-alarm" class="path-icon path-alarm" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg> <div id='alarms' class = "w-100">ALARMS</div>
+	  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" class="svg-inline--fa fa-exclamation-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path id = "path-alarm" class="path-icon path-alarm" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg> <div id='alarms' class = "w-100"></div>
         </ul>
 
 	<!-- User-->
@@ -101,8 +101,8 @@
           document.getElementById("temperature").innerHTML = data.temperature;
           document.getElementById("pressure_buffer").innerHTML = data.pressure_buffer;
           document.getElementById("pressure_inhale").innerHTML = data.pressure_inhale;
-          document.getElementById("variable5").innerHTML = data.variable5;
-          document.getElementById("variable6").innerHTML = data.variable6;
+          document.getElementById("temperature_buffer").innerHTML = data.temperature_buffer;
+          document.getElementById("pressure_o2_regulated").innerHTML = data.pressure_o2_regulated;
           }
 	  );
 	  }
@@ -135,7 +135,16 @@
 	  }
 	  setInterval('update_alarms()', 1000);
 	</script>
+
 	
+
+	<script type = text/javascript>
+	  function show_easy_numpad_wrapper(thisElement){
+	  if (thisElement.disabled == false && thisElement.readOnly == false){
+	  show_easy_numpad(thisElement);
+	  }
+	  }
+	</script>
 	
     </body>
 </html>
