--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -2013,6 +2013,7 @@ pre code {
 .form-button{
   height: calc(1.3em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
+  background-color: #1f4793 ; color: white
 }
 @media (prefers-reduced-motion: reduce) {
   .form-control {
@@ -10297,6 +10298,16 @@ div.active{
     border: 1px solid var(--cern);
     width:200px;
     height:100px;
+    box-shadow:
+        inset 0 0 2px 0 rgba(255,255,255,.4),
+        inset 0 0 3px 0 rgba(0,0,0,.4),
+        inset 0 0 3px 5px rgba(0,0,0,.05),
+        2px 2px 4px 0 rgba(0,0,0,.25);
+    border-radius: 4px;    
+
+}
+.sb-control-button-pressed{
+
 }
 
 .sb-nav-button{ border: 1px solid var(--cern); width:95px; fill:none;
@@ -10304,27 +10315,27 @@ div.active{
     display: inline-block;
     //text-shadow: 0 0 2px rgba(0,0,0,.3);
     //font-family: sans-serif;
-    //box-shadow:
-    //    inset 0 0 2px 0 rgba(255,255,255,.4),
-    //    inset 0 0 3px 0 rgba(0,0,0,.4),
-    //    inset 0 0 3px 5px rgba(0,0,0,.05),
-    //    2px 2px 4px 0 rgba(0,0,0,.25);
+    box-shadow:
+        inset 0 0 2px 0 rgba(255,255,255,.4),
+        inset 0 0 3px 0 rgba(0,0,0,.4),
+        inset 0 0 3px 5px rgba(0,0,0,.05),
+        2px 2px 4px 0 rgba(0,0,0,.25);
     border-radius: 4px;
 
 	      }
-.sb-nav-button:before {
-    //top: 0;
-    //border-bottom-left-radius: 4px;
-    //border-bottom-right-radius: 4px;
-    //background: rgba(255,255,255,.6);
-    //box-shadow: 0 1px 2px 0 rgba(255,255,255,.6);
+.sb-control-button:before {
+    top: 0;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background: rgba(255,255,255,.6);
+    box-shadow: 0 1px 2px 0 rgba(255,255,255,.6);
 }
-.sb-nav-button:after {
-    //bottom: 0;
-    //border-top-left-radius: 4px;
-    //border-top-right-radius: 4px;
-    //background: rgba(0,0,0,.15);
-    //box-shadow: 0 -1px 2px 0 rgba(0,0,0,.15);
+.sb-control-button:after {
+    bottom: 0;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    background: rgba(0,0,0,.15);
+    box-shadow: 0 -1px 2px 0 rgba(0,0,0,.15);
 }
 .controls { position: absolute;bottom:0;}
 
