--- a/raspberry-backend/templates/settings.html
+++ b/raspberry-backend/templates/settings.html
@@ -7,9 +7,11 @@
     <div class="row justify-content-center">
       <div class="card rounded-lg px-0 py-0 my-1">
         <div class="card-header px-1 py-1">Personal Details
-	  <div class="float-right"><a class="unlock personal" id="toggle_personal" onclick="toggle_lock_personal()">
+	  <div class="float-right mr-1"><a class="unlock personal" id="toggle_personal" onclick="toggle_lock_personal()">
 	      <svg aria-hidden="true" id="personal_lock" focusable="false" data-prefix="fas" data-icon="lock" class="svg-inline--fa fa-lock fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-		<path class="path-icon" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
+				<path class="path-icon" id = "path-locked-details" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
+		<path class="path-icon transparent" id="path-unlocked-details" d="M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
+
 	      </svg>
 	    </a></div>
 	</div>
@@ -26,9 +28,10 @@
       <div class="card rounded-lg px-0 py-0">
         <div class="card-header px-1 py-1">
 	  Thresholds
-	  <div class = "float-right"><a class="unlock thresholds" id="toggle_thresholds" onclick="toggle_lock_thresholds()">
-	    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock" class="svg-inline--fa fa-lock fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-	      <path class="path-icon" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
+	  <div class = "float-right mr-1"><a class="unlock thresholds" id="toggle_thresholds" onclick="toggle_lock_thresholds()">
+	      <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock" class="svg-inline--fa fa-lock fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+		<path class="path-icon" id = "path-locked-thresholds" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
+		<path class="path-icon transparent" id="path-unlocked-thresholds" d="M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
 	    </svg>
 	    </a>
 	    </div>
@@ -57,7 +60,7 @@
       </div>
     </div>
     <div class="row justify-content-center">
-          <span class="form-group" ><input class="form-control py-0" style="background-color: #1f4793 ; color: white" id="inputPassword" type="submit" value="Submit Changes"  /></span>
+          <span class="form-group" ><input class="form-button py-0" id="inputPassword" type="submit" value="Submit Changes"  /></span>
     </div>
   </form>
 </div>
@@ -66,20 +69,34 @@
 {% block scripts %}
 <script type=text/javascript>
   function toggle_lock_personal() {
+  setTimeout(function(){
   if ( document.getElementById("inputName").readOnly == true){
   document.getElementById("inputName").readOnly = false;
   document.getElementById("inputAge").readOnly = false;
   document.getElementById("inputWeight").readOnly = false;
   document.getElementById("inputHeight").readOnly = false;
+  var el = document.getElementById("path-unlocked-details");
+  el.classList.remove("transparent");
+  var el2 = document.getElementById("path-locked-details");
+  el2.classList.add("transparent");
+
   }
   else {
   document.getElementById("inputName").readOnly   = true;
   document.getElementById("inputAge").readOnly    = true;
   document.getElementById("inputWeight").readOnly = true;
   document.getElementById("inputHeight").readOnly = true;
+  var el = document.getElementById("path-unlocked-details");
+  el.classList.add("transparent");
+  var el2 = document.getElementById("path-locked-details");
+  el2.classList.remove("transparent");
+
   }
-  }
+  },500)}
+
+  
   function toggle_lock_thresholds() {
+  setTimeout(function(){
   if ( document.getElementById("pressure_air_supply").readOnly == true){
   document.getElementById("pressure_air_supply").readOnly = false;
   document.getElementById("pressure_air_regulated").readOnly = false;
@@ -94,7 +111,11 @@
   document.getElementById("readback_valve_scavenge").readOnly = false;
   document.getElementById("readback_valve_purge").readOnly = false;
   document.getElementById("readback_mode").readOnly = false;
-
+  var el = document.getElementById("path-unlocked-thresholds");
+  el.classList.remove("transparent");
+  var el2 = document.getElementById("path-locked-thresholds");
+  el2.classList.add("transparent");
+  
   }
   else {
   document.getElementById("pressure_air_supply").readOnly = true;
@@ -110,8 +131,13 @@
   document.getElementById("readback_valve_scavenge").readOnly = true;
   document.getElementById("readback_valve_purge").readOnly = true;
   document.getElementById("readback_mode").readOnly = true;
+  var el = document.getElementById("path-unlocked-thresholds");
+  el.classList.add("transparent");
+  var el2 = document.getElementById("path-locked-thresholds");
+  el2.classList.remove("transparent");
+
   }
-  }
+  },500)}
 
 
 </script>
