Fixes in the UI

--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -100,12 +100,12 @@
 	  $.getJSON("live-data",
           function (data) {
           //document.getElementById("pressure").innerHTML = data.pressure;
-          document.getElementById("temperature").innerHTML = data.temperature;
           document.getElementById("pressure_buffer").innerHTML = data.pressure_buffer;
           document.getElementById("pressure_inhale").innerHTML = data.pressure_inhale;
           document.getElementById("temperature_buffer").innerHTML = data.temperature_buffer;
           document.getElementById("pressure_o2_regulated").innerHTML = data.pressure_o2_regulated;
           document.getElementById("fsm_state").innerHTML = data.fsm_state;
+          document.getElementById("version").innerHTML = data.version;
           }
 	  );
 	  }
