--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -11,9 +11,7 @@
     <!--<h1 class="mt-4">Info</h1> !-->
     <div class = "row">
       <div class = "col-md-7 py-0">
-	<select id='chart_variables' multiple>
-        <option value='temperature' selected>temperature</option>
-        <option value='pressure' selected>pressure</option>
+	<select id='chart_variables' multiple="multiple">
         <option value='pressure_buffer' selected>pressure_buffer</option>
         <option value='pressure_inhale' selected>pressure_inhale</option>
         <option value='temperature_buffer' selected>temperature_buffer</option>
@@ -24,7 +22,7 @@
 	<div class="row">
           <div class="col-md-12">
             <div class="card mb-6">
-              <div class="card-chart-header small ">Variable number 1</div>
+              <div class="card-chart-header small ">Plots</div>
               <div class="card-body px-0 py-0"><canvas id="pressure_air_supply" width="100%" height="65px"></canvas></div>
             </div>
           </div>
@@ -37,9 +35,9 @@
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1">
-		<a class="small text-dark stretched-link" href="#">Temperature</a>
+		<a class="small text-dark stretched-link" href="#">Version</a>
               </div>
-              <div class="card-body px-1 py-3"><span class = "reading-main" id="temperature">000.00</span> &#8451;</div>
+              <div class="card-body px-1 py-3"><span class = "reading-main" id="version">000.00</span></div>
 	    </div>
 	  </div>
 	  
