some very minor UI changes and update of colors for chart plot

--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -30,7 +30,7 @@
 	<!-- User-->
         <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
           <li class="nav-item dropdown">
-            <i class="fas fa-user fa-fw"></i>
+            <!--<i class="fas fa-user fa-fw"></i>-->
 	  </li>
 	  <span class="patient">{{patient}}</span>
 	</ul>
