--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -2011,8 +2011,7 @@ pre code {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .form-button{
-  height: calc(1.3em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
+    //height: calc(1.1em + 0.75rem + 2px);
   background-color: #1f4793 ; color: white
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4396,7 +4395,6 @@ input[type=button].btn-block {
 }
 
 .card-header {
-  padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
@@ -10284,6 +10282,8 @@ body {
 .alarm-ok{border: 1px solid var(--cern); width:20rem;}
 .alarm-red{border-color:#ff0000;color:#ff0000}
 .text-align-right{text-align:right;}
+.text-align-center{text-align:center;}
+
 #alarms{color:red;vertical-align:middle;text-align:center;line-height:calc(var(--top-height) - 0.5rem);}
 .border-invisible{
     border: 1px solid rgb(255,255,255);
@@ -10298,11 +10298,11 @@ div.active{
     border: 1px solid var(--cern);
     width:200px;
     height:100px;
-    box-shadow:
-        inset 0 0 2px 0 rgba(255,255,255,.4),
-        inset 0 0 3px 0 rgba(0,0,0,.4),
-        inset 0 0 3px 5px rgba(0,0,0,.05),
-        2px 2px 4px 0 rgba(0,0,0,.25);
+    //box-shadow:
+    //    inset 0 0 2px 0 rgba(255,255,255,.4),
+    //    inset 0 0 3px 0 rgba(0,0,0,.4),
+    //    inset 0 0 3px 5px rgba(0,0,0,.05),
+    //    2px 2px 4px 0 rgba(0,0,0,.25);
     border-radius: 4px;    
 
 }
@@ -10315,11 +10315,11 @@ div.active{
     display: inline-block;
     //text-shadow: 0 0 2px rgba(0,0,0,.3);
     //font-family: sans-serif;
-    box-shadow:
-        inset 0 0 2px 0 rgba(255,255,255,.4),
-        inset 0 0 3px 0 rgba(0,0,0,.4),
-        inset 0 0 3px 5px rgba(0,0,0,.05),
-        2px 2px 4px 0 rgba(0,0,0,.25);
+    //box-shadow:
+    //    inset 0 0 2px 0 rgba(255,255,255,.4),
+    //    inset 0 0 3px 0 rgba(0,0,0,.4),
+    //    inset 0 0 3px 5px rgba(0,0,0,.05),
+    //    2px 2px 4px 0 rgba(0,0,0,.25);
     border-radius: 4px;
 
 	      }
@@ -10328,16 +10328,19 @@ div.active{
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     background: rgba(255,255,255,.6);
-    box-shadow: 0 1px 2px 0 rgba(255,255,255,.6);
+    //box-shadow: 0 1px 2px 0 rgba(255,255,255,.6);
 }
 .sb-control-button:after {
     bottom: 0;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     background: rgba(0,0,0,.15);
-    box-shadow: 0 -1px 2px 0 rgba(0,0,0,.15);
+    //box-shadow: 0 -1px 2px 0 rgba(0,0,0,.15);
 }
 .controls { position: absolute;bottom:0;}
 
 .col-center{ margin: 0 auto; }
 .lh-1{line-height:1;}
+.min-height-1b{min-height:1.75rem;}
+.min-height-2{min-height:2rem;}
+.min-height-6{min-height:6rem;}
