--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -73,6 +73,7 @@
         <script src="{{ url_for('static', filename='js/moment.js') }}"></script>
         <script src="{{ url_for('static', filename='js/Chart.js') }}"></script>
         <script src="{{ url_for('static', filename='js/Chart-plot.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/Chart-display.js') }}"></script>
         <script src="{{ url_for('static', filename='js/jquery.dataTables.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/dataTables.bootstrap4.min.js') }}"></script>
 
