--- a/raspberry-backend/templates/charts.html
+++ b/raspberry-backend/templates/charts.html
@@ -1,5 +1,8 @@
 {% set charts_active = True %}
 {% extends 'base.html' %}
+<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/Chart-display.js') }}"></script> 
+
 
 {% block fan_classes %}
 {% endblock %}
