--- a/raspberry-backend/templates/logs.html
+++ b/raspberry-backend/templates/logs.html
@@ -27,7 +27,7 @@
     <!--<h1 class="mt-4">Info</h1> !-->
 
     <input type="button" value="Update alarms" id="update_button" style="background-color:gray; border-color:blue; color:white"></input>
-    <button type="button" id="ack_alarms"   style="background-color:gray; border-color:blue; color:white">Aknowledge all alarms</button>
+    <button type="button" id="ack_alarms"   style="background-color:gray; border-color:blue; color:white">Acknowledge all alarms</button>
 
 
       <table id="HEV_logs">
@@ -35,7 +35,7 @@
             <tr>
                 <th>Date and time</th>
                 <th>Alarm message</th>
-                <th>Aknowledge</th>
+                <th>Acknowledge</th>
 
 
             </tr>
