--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -31,9 +31,8 @@
 	</div>
       </div>
     
-      <div class = "col-md-5 py-0 px-0  mr-0 pl-1">
+      <div class = "col-md-5 py-0 px-0 mr-0 pl-1">
 	<div class="row">
-	  
 	  <div class="col-xl-4 px-1 py-0 mr-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
@@ -52,7 +51,7 @@
 	    </div>
 	  </div>
 	  
-	  <div class="col-xl-4 col-md-8 px-1 py-0">
+	  <div class="col-xl-4 px-1 py-0">
 	    <div class="card bg-primary text-dark mb-2">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark stretched-link col-center" href="#">pressure_buffer</a>
@@ -60,10 +59,11 @@
               <div class="card-body px-1 py-3"><span class = "reading-main" id = "pressure_buffer">000.00</span> Pa</div>
 	    </div>
 	  </div>
+	  
 	</div>
 	
 	<div class="row">
-	<div class="col-xl-4 px-1 py-0 col-md-5">
+	<div class="col-xl-4 px-1 py-0">
 	  <div class="card bg-primary text-dark mb-2">
             <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 	      <a class="small text-dark stretched-link col-center" href="#">pressure_inhale</a>
@@ -71,7 +71,7 @@
             <div class="card-body px-1 py-3"><span class = "reading-main" id = "pressure_inhale">000.00</span> Pa</div>
 	  </div>
 	</div>
-	<div class="col-xl-4 col-md-8 px-1 py-0">
+	<div class="col-xl-4 px-1 py-0">
 	  <div class="card bg-primary text-dark mb-2">
             <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 	      <a class="small text-dark stretched-link col-center" href="#">temperature_buffer</a>
@@ -79,7 +79,7 @@
             <div class="card-body px-1 py-3"><span class = "reading-main" id = "temperature_buffer">000.00</span> &#8451;</div>
 	  </div>
 	</div>
-	<div class="col-xl-4 px-1 py-0 col-md-8">
+	<div class="col-xl-4 px-1 py-0">
 	  <div class="card bg-primary text-dark mb-2">
             <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
 	      <a class="small text-dark stretched-link col-center" href="#">pressure_o2_regulated</a>
@@ -200,7 +200,7 @@
 	  function update_variables() {
 	  $.getJSON("live-data",
           function (data) {
-          //document.getElementById("pressure").innerHTML = data.pressure;
+          document.getElementById("pressure").innerHTML = data.pressure;
           document.getElementById("pressure_buffer").innerHTML = data.pressure_buffer;
           document.getElementById("pressure_inhale").innerHTML = data.pressure_inhale;
           document.getElementById("temperature_buffer").innerHTML = data.temperature_buffer;
