--- a/raspberry-backend/templates/charts.html
+++ b/raspberry-backend/templates/charts.html
@@ -17,7 +17,7 @@
 	<div class="row">
           <div class="col-md-12">
             <div class="card mb-6">
-              <div class="card-chart-header small ">Pressure [mbar]</div>
+              <!-- <div class="card-chart-header small ">Pressure [mbar]</div> -->
               <div class="card-body px-0 py-0"><canvas id="pressure_chart" width="200%" height="30"></canvas></div>
             </div>
           </div>
@@ -25,7 +25,7 @@
 	<div class = "row">
           <div class="col-md-12">
             <div class="card mb-6 px-0 py-0">
-              <div class="card-chart-header small">Flow [mL/min]</div>
+              <!-- <div class="card-chart-header small">Flow [mL/min]</div> -->
 	      <div class="card-body px-0 py-0"><canvas id="flow_chart" width="200%" height="30"></canvas></div>
 	    </div>
 	  </div>
@@ -33,7 +33,7 @@
 	<div class = "row">
 	  <div class="col-md-12">
 	    <div class="card mb-6 px-0 py-0">
-	      <div class="card-chart-header small ">Volume [mL]</div>
+	      <!-- <div class="card-chart-header small ">Volume [mL]</div> -->
 	      <div class="card-body px-0 py-0"><canvas id="volume_chart" width="200%" height="30"></canvas></div>
 	    </div>
 	  </div>
