--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -182,6 +182,11 @@ small {
   font-size: 80%;
 }
 
+tiny, .tiny {
+  font-size: 50%;
+}
+
+
 sub,
 sup {
   position: relative;
@@ -10304,7 +10309,7 @@ html, body {
 .br-red{border: 1px solid #ff0000;}
 
 .reading{font-size:1.7rem;min-width:6rem;display:inline-block;text-align:right;}
-.reading-main{font-size:1.3rem;min-width:5rem;display:inline-block;text-align:right;}
+.reading-main{font-size:1.2rem;min-width:4rem;display:inline-block;text-align:right;}
 
 
 #logo{ height:var(--top-height); }
